[project]
name = "morph-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mootah", email = "44580337+mootah@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.133.1",
    "pip>=26.0.1",
    "spacy>=3.8.11",
    "uvicorn>=0.41.0",
]

[project.scripts]
morph-api = "morph_api:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
