[project]
name = "morph-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mootah", email = "44580337+mootah@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.133.1",
    "pip>=26.0.1",
    "pyyaml>=6.0.3",
    "spacy>=3.8.11",
    "taskipy>=1.14.1",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
]

[tool.taskipy.variables]
host = "127.0.0.1"
port = "19634"

[tool.taskipy.tasks]
dev = {
  cmd = "uvicorn app.main:app --host {host} --port {port} --reload --log-level debug",
  use_vars = true
}
server = {
  cmd = "uvicorn app.main:app --host {host} --port {port} --workers 4 --log-level info --no-access-log",
  use_vars = true
}
test = "uv run tests/test_api.py"

